nesc-frontend/src/test/resources/integration/programs/bad/bad01/C.nc
/* Using an attribute definition as a type for a variable. */

struct @attr { int i; } x;

configuration C
{
}
implementation
{
}
